syntax="proto3";

package tutorial;

option java_multiple_files = true;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    map<string, PhoneType> number = 1;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}


message Layer1 {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message Layer2 {
  Layer1 location = 1;
  int32 direction = 2;
}

message Layer4 {
  map<string, Layer3> geoSpatials = 1;
}

message Layer3 {
  map<int32, Layer2> spatials = 1;
}